--- a/tests/WindowsApps.Toolkit.WinUI.Test/MainWindow.xaml
+++ b/tests/WindowsApps.Toolkit.WinUI.Test/MainWindow.xaml
@@ -1,12 +1,11 @@
-﻿<Window
+﻿<Window x:Name="_window"
     x:Class="WindowsApps.Toolkit.WinUI.Test.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Button x:Name="myButton" Click="myButton_Click">Click Me</Button>
-    </StackPanel>
+    <Grid>
+        <Frame x:Name="ContentFrame"/>
+    </Grid>
 </Window>
